# ApexVector

./: .gitignore  AGENTS.md  README.md  batch_process.py  corrected.py  finalOptimization.md  improved_corrected.py  improved_voronoi_pipeline.py  investigate_bspline.py  optimized_v2.py  pyproject.toml  requirements.txt  run_poster.py  session-ses_3c53.md  tasks.md  tasks2.md  test_bspline_fix.py  test_smoothing_comparison.py  working.md
CLSCT/: .gitignore  README.md  architecture.md  core.md  generate_comparisons.py  mind.md  plan.md  pyproject.toml  requirements.txt
CLSCT/apx_clsct/: __init__.py  __main__.py  cli.py  contour.py  extract.py  pipeline.py  quantize.py  simplify.py  smooth.py  svg.py  types.py
CLSCT/tests/: __init__.py  conftest.py  test_contour.py  test_extract.py  test_pipeline.py  test_poster_pipeline.py  test_quantize.py  test_rasterizer.py  test_real_images.py  test_simplify.py  test_smooth.py  test_svg.py
CLSCT/tests/utils/: svg_to_png.py
apexvec/: __init__.py  __main__.py  boundary_extraction.py  boundary_smoother.py  cli.py  color_quantizer.py  compute_backend.py  contrast_pipeline.py  debug_utils.py  debug_visualization.py  hierarchical_merger.py  multi_scale_quantizer.py  perceptual_loss.py  pipeline.py  poster_edge_pipeline.py  poster_first_pipeline.py  poster_pipeline.py  quantization.py  raster_ingest.py  region_classifier.py  region_decomposer.py  region_extractor.py  region_merger.py  shared_boundary_smoother.py  slic_pipeline.py  smoothing_experiments.py  svg_export.py  svg_optimizer.py  svg_to_png.py  topology_merger.py  types.py  viz_utils.py
apexvec/strategies/: detail.py  edge.py  flat.py  gradient.py  router.py
debug/img0/: stage1_ingest_data.pkl  stage2_quantize_data.pkl  stage3_regions_data.pkl  stage4_boundaries_data.pkl  stage5_smoothed_data.pkl
debug_output/: stage_04_stats.txt  stage_06_timing.txt
docs/plans/: 2026-02-08-curvature-preserving.md  2026-02-11-poster-pipeline-implementation.md
smoothing_comparison/: summary_report.json
testing/: create_test_images.py
tests/: test_boundary_extraction.py  test_integration_poster_pipeline.py  test_poster.py  test_quantization.py  test_region_merger.py  test_shared_boundary_smoother.py
trash/experimental/: input_output_plan.md
trash/old_pipelines/: batch_voronoi.py  feature_aware_pipeline.py  improved_corrected.py  oneFileNew.py  (+1 more)
validation_spike/: README.md  RESULTS.md  STATUS.txt
vectorizer/: __init__.py  __main__.py  boundary_smoother.py  cli.py  color_quantizer.py  compute_backend.py  debug_utils.py  perceptual_loss.py  pipeline.py  poster_first_pipeline.py  poster_pipeline.py  raster_ingest.py  region_classifier.py  region_decomposer.py  region_extractor.py  svg_export.py  svg_optimizer.py  topology_merger.py  types.py  viz_utils.py
(+13 files in other folders)
